# table-maker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/table_maker/: __init__.py  __main__.py  cli.py  dimensions.py  generators.py  maker.py  table_data.py  visualizer.py
tests/: conftest.py  test_cli.py  test_maker.py
